<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/usernameText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Username"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="54dp"
                    android:ems="10"
                    android:hint="Name"
                    android:paddingLeft="10dp"
                    android:inputType="textPersonName" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/passwordText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Password"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="54dp"
                    android:ems="10"
                    android:hint="Password"
                    android:paddingLeft="10dp"
                    android:inputType="textPassword" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/gender"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:text="Gender"
                    android:textSize="20dp" />

                <Spinner
                    android:id="@+id/gender"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="91dp"
                    android:ems="10"
                    android:entries="@array/genderArray"
                    android:prompt="@string/genderPrompt"
                    android:spinnerMode="dialog" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Age"
                    android:textSize="19dp" />

                <Spinner
                    android:id="@+id/age"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="91dp"
                    android:ems="10"
                    android:entries="@array/age"
                    android:prompt="@string/AgePrompt"
                    android:spinnerMode="dialog" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/heightText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Height(cm)"
                    android:textSize="19dp" />

                <Spinner
                    android:id="@+id/body_height"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="91dp"
                    android:ems="10"
                    android:entries="@array/height"
                    android:prompt="@string/heightPrompt"
                    android:spinnerMode="dialog" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/weightText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Weight(kg)"
                    android:textSize="19dp" />

                <Spinner
                    android:id="@+id/weight"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="91dp"
                    android:ems="10"
                    android:entries="@array/weight"
                    android:prompt="@string/weightPrompt"
                    android:spinnerMode="dialog" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/personalGoal"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Ultimate Goal"
                    android:textSize="19dp" />

                <Spinner
                    android:id="@+id/goal_spinner"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="91dp"
                    android:ems="10"
                    android:entries="@array/workoutGoals"
                    android:prompt="@string/workoutGoalPrompt"
                    android:spinnerMode="dialog" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/dailyGoalText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="Daily Goal"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/dailyGoal"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="54dp"
                    android:ems="10"
                    android:hint="Calories Goal"
                    android:inputType="number" />
            </RelativeLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center">

                <Button
                    android:id="@+id/realSignUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>