...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up" />

            <Button
                android:id="@+id/buttonlogin"
...
